CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file..

Version 1.9.0
---------------------------------------------------------------------
29 September 2008
+ Freecap changed to fit new captcha class changes
+ Recaptcha added. Thanks Jeremy.
+ Gave ids to form wrapping tags.
+ Text - added use_breaker parameter to parseOutput
+ Form - fixed setRequired
+ update Captcha instructions

23 September 2008
+ DBPager - can set title of header sort tags now using third
  parameter of addSortHeaders.
+ Captcha - if a problem exists, captcha fails instead of allowing
  them to continue;
+ USE_BREAKER added to text_settings.php
+ ALLOW_SCRIPT_TAGS added to default config.tpl template
+ Converts had breaker added to them to prevent need for breaker in
  text class.
+ Security - allows script tags if user is permitted.
+ Javascript - open_window allows dev to set whether the window opens
  in the center or not
+ Updated: conf/text_settings.php

18 September 2008
+ Core - added allowScriptTags function
+ DBPager - added note about why cache is not on by default.
+ Key - added ability to set the source_table in the restrictView
  function. 
+ Link - Fixed bug by changing an "isset" to a "!empty"
+ Text
  o breaker is no longer the default condition. Leaning on wysiwyg
    now.
  o Removed single quote from encodeXHTML
  o allowed tags altered to allow script tags if ALLOW_SCRIPT_TAGS is
    true.


10 September 2008
+ Form.php
  o changed getValue function to change " to &quot;
  o simplified getValue to only return form mode and change textarea
  to accommodate.
+ Added JQUERY_LATEST define to config file. If true, it includes from
  the home site.
+ Changed 400 message for sensitive types and those who don't know who
  Ponch is.
+ Added datepicker
+ Updated: javascript/datepicker

5 September 2008
+ PageSmith convert rewrite fixed.
+ bb filter pulls out newlines before translating. Replaced when done.