@@ -4,6 +4,12 @@ its own separate CHANGELOG file..
 
 Version 1.9.0
 ---------------------------------------------------------------------
+30 September 2008
++ Fixed js_calendar image. Thanks Verdon.
++ Added csv reports into DBPager.
++ Removed unused parameter.
++ Added randomString function to Text.
+
 29 September 2008
 + Freecap changed to fit new captcha class changes
 + Recaptcha added. Thanks Jeremy.
